CHANGELOG

>>VERSION 17.8
+ Added labradorite set of blocks
+ Added "kill mob" type of quests
+ Added "kill player" type of quests
+ Added lots of achievements

* Changed werewolf stats
* Changed relation between Reach and Westerlands//Crownlands
* Changed armor stats
* Changed unpledge sound to amogus impostor sound
* Changed some waypoint regions because of players' complaints. Essos wp can be unlocked in Kings Landing; Sothoryos - Ghiscar; Ulthos - Asshai; Ibben - Essos; Summer Islands - Sothoryos.
* Changed standart wight armor (for egg)

* Improved localization icon texture
* Improved stone men, their skins and mechanics
* Improved a few armor & weapon textures
* Improved yellow banners' textures
* Improved workbench textures, recipes
* Improved prices for valuable items
* Improved chest contents in all the world
* Improved andesite, rhyolite & basalt sets textures
* Improved Asshai City, improved a few Asshai structures
* Improved Asshai landspcape
* Improved tramp spawning
* Improved sothoryos virus mechanics

* Optimized client tick handler

* Fixed 33 bugs with bottom table textures
* Fixed bug with ban of vanilla enchanting
* Fixed bug with hostile peaceful mobs
* Fixed bug with furnace GUI
* Fixed bug with wrong chest contents
* Fixed bug with Loras Tyrell
* Fixed bug with 25% of spawning a wrong structure at waypoint
* Fixed bug with slaves speechbank
* Fixed bug with towers in asshai
* Fixed bug with wildling head slot

- Removed Carnotite set of blocks, because it turned out that it was uran ore

>>VERSION 17.7.3
+ Added full Polish edition (lore, speech, names, quests: prod. Axel)
+ Added strict title rules, as in the LOTR
+ Added min Y limit for waypoint creation, as in the LOTR
+ Added fellowship creation settings, as in the LOTR
+ Returned alignment zones feature

* Improved font pack, now with support of extended Latin & Cyrillic alphabets.
+ Improved cold weapon, some bugs and strange stats can be fixed.

* Fixed bug with saving level data